<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dest_scoreKeeperFragment">

    <fragment
        android:id="@+id/dest_scoreKeeperFragment"
        android:name="com.example.tddscorekeeper.main.fragment.ScoreKeeperFragment"
        android:label="fragment_score_keeper"
        tools:layout="@layout/fragment_score_keeper" >
        <action
            android:id="@+id/action_scoreKeeperFragment_to_resetScoreDialog"
            app:destination="@id/dest_resetScoreDialog" />
        <action
            android:id="@+id/action_dest_scoreKeeperFragment_to_resetHighScoreDialog"
            app:destination="@id/dest_resetHighScoreDialog" />
    </fragment>
    <dialog
        android:id="@+id/dest_resetScoreDialog"
        android:name="com.example.tddscorekeeper.main.fragment.dialog.ResetScoreDialog"
        android:label="ResetScoreDialog"
     />
    <dialog
        android:id="@+id/dest_resetHighScoreDialog"
        android:name="com.example.tddscorekeeper.main.fragment.dialog.ResetHighScoreDialog"
        android:label="ResetHighScoreDialog" />
</navigation>